chapter04 Vue.js初級 コンポーネント<slot></slot>

--- a/practice04/sample10/index.html
+++ b/practice04/sample10/index.html
@@ -15,7 +15,7 @@
         <div class="frame__inner">
             <div id="app">
               <clock></clock>
-              <clock></clock>
+              <clock style="color: blue">現在時刻</clock>
             </div>
             <!-- ここに、JavaScriptを記述します -->
             <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
@@ -36,7 +36,7 @@
                     this.time = `${now.getHours()}:${now.getMinutes()}:${now.getSeconds()}`
                   }
                 },
-                template: '<div>{{ time }}</div>'
+                template: '<div :style=""><h2><slot>時計</slot></h2>{{ time }}</div>'
               })
 
               var app = new Vue({
