--- a/practice04/sample12/index02.html
+++ b/practice04/sample12/index02.html
@@ -15,7 +15,8 @@
         <div class="frame__inner">
           <div id="app">
             <input type="number" name="num1" v-model.number="num1"> +
-            <input type="number" name="num2" v-model.number="num2"> =
+            <input type="number" name="num2" v-model.number="num2"> +
+            <input type="number" name="num3" v-model.number="num3"> =
             <span v-if="done">{{ answer }}</span>
           </div>
           <!-- ここに、JavaScriptを記述します -->
@@ -25,14 +26,15 @@
               el: "#app",
               data: {
                 num1: 0,
-                num2: 0
+                num2: 0,
+                num3: 0
               },
               computed: {
                 answer: function() {
-                  return this.num1 + this.num2;
+                  return this.num1 + this.num2 + this.num3;
                 },
                 done: function() {
-                  return (this.num1 !== 0 && this.num2 !== 0);
+                  return (this.num1 !== 0 && this.num2 !== 0 && this.num3);
                 }
               }
             })
