--- a/practice02/sample01/index.html
+++ b/practice02/sample01/index.html
@@ -16,6 +16,7 @@
             <!-- ここに、JavaScriptを記述します -->
             <script>
               document.write('JavaScriptを勉強中です');
+              document.write('JavaScriptを勉強中です');
             </script>
         </div>
     </div>
