[JS] JavaScriptを書く時の細かな注意点

--- a/practice02/sample01/index.html
+++ b/practice02/sample01/index.html
@@ -16,7 +16,7 @@
             <!-- ここに、JavaScriptを記述します -->
             <script>
               document.write('JavaScriptを勉強中です');
-              document.write('JavaScriptを勉強中です');
+              document.write("I'm Japanese.");
             </script>
         </div>
     </div>
