--- a/practice02/sample02/index.html
+++ b/practice02/sample02/index.html
@@ -14,7 +14,9 @@
 
         <div class="frame__inner">
             <!-- ここに、JavaScriptを記述します -->
-
+            <script>
+                alert('ご注意ください！');
+            </script>
         </div>
     </div>
 </body>
