--- a/practice02/sample02/index.html
+++ b/practice02/sample02/index.html
@@ -15,6 +15,11 @@
         <div class="frame__inner">
             <!-- ここに、JavaScriptを記述します -->
             <script>
+                // 警告ウィンドウを表示する
+                /*
+                    aaaaa
+                    komento
+                */
                 alert('ご注意ください！');
             </script>
         </div>
