[JS] window.prompt

--- a/practice02/sample04/index.html
+++ b/practice02/sample04/index.html
@@ -15,11 +15,9 @@
         <div class="frame__inner">
             <!-- ここに、JavaScriptを記述します -->
             <script>
-                // ユーザーの入力を受け付ける
-                let day = prompt('何日の秒数を計算しますか？');
-
-                // 指定された日数の秒数を計算する
-                document.write(60*60*24*day);
+                // 1年が何秒かを計算する
+                document.write(60*60*24*365 + '秒');
+                document.write((11+3)*4);
             </script>
         </div>
     </div>
