--- a/practice02/sample28/index.html
+++ b/practice02/sample28/index.html
@@ -15,15 +15,7 @@
         <div class="frame__inner">
             <div id="timer"></div>
             <!-- ここに、JavaScriptを記述します -->
-            <script>
-                let timer = () => {
-                    let now = new Date();
-                    document.getElementById('timer').innerHTML =
-                        `${now.getHours()}:${now.getMinutes()}:${now.getSeconds()}`;
-                }
-
-                let timerID = setInterval(timer, 500);
-            </script>
+            <script src="timer.js"></script>
         </div>
     </div>
 </body>
